# bebasin

./: Cargo.toml  latest.json
.github/workflows/: ci.yml
misc/: default-hosts  hosts
src/: app.rs  core.rs  error.rs  helpers.rs  main.rs  message_digest.rs  parser.rs  ui.rs  updater.rs  writer.rs
