[package]
name = "bebasin"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
webbrowser = "0.5.5"
pest = "2.1.3"
pest_derive = "2.1.0"
md5 = "0.7.0"
curl = "0.4.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
zip = "0.5"
itertools = "0.9.0"

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = ["crossterm-backend"]

# Windows specific
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]

# Unix specific
[target.'cfg(unix)'.dependencies]
nix = "0.16.1"
